fixed meeting sort and added human-readable meeting times

--- a/vue/src/styles/pages/_meetings.scss
+++ b/vue/src/styles/pages/_meetings.scss
@@ -321,7 +321,6 @@ header.meeting-header {
 
     .mtg-date {
       text-align: left;
-      width: 15%;
       @include detailsFont;
       color: $gray3;
     }
